--- a/style.css
+++ b/style.css
@@ -382,8 +382,7 @@ nav a:hover {
 
 /* Specific background images for each project */
 .ubuntu-site-card .project-image-background {
-    background-image: url('net.jpg');
-}
+    background-image: url('net.jpg');}
 
 .community-project-card .project-image-background {
     background-image: url('edu.jpg');
