--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ nav a:hover {
     background-color: #3b3e41;
     color: #fff;
     transform: rotateY(180deg);
-    justify-content: space-between;
+    justify-content: center;
     padding-top: 30px;
     padding-bottom: 30px;
 }
