--- a/style.css
+++ b/style.css
@@ -386,8 +386,7 @@ nav a:hover {
 } */
 
 .ubuntu-site-card .project-image-background {
-    background-image: url('net.jpg'); 
-}
+    background-image: url('net.jpg');}
 
 .community-project-card .project-image-background {
     background-image: url('edu.jpg'); /* Ensure 'edu.jpg' is the exact filename on GitHub */
